--- a/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/components/pom.xml
@@ -50,7 +50,7 @@
             <dependency>
                 <groupId>com.fasterxml.jackson.dataformat</groupId>
                 <artifactId>jackson-dataformat-cbor</artifactId>
-                <version>2.10.1</version>
+                <version>${m2.fasterxml.jackson.version}</version>
             </dependency>
             <!-- Required by commons-lang-2.6.pom -->
             <dependency>
