--- a/main/plugins/org.talend.designer.maven.tos/resources/pom.xml
+++ b/main/plugins/org.talend.designer.maven.tos/resources/pom.xml
@@ -18,4 +18,7 @@
         <module>surefire/pom.xml</module>
         <module>zip/pom.xml</module>
     </modules>
+    <properties>
+        <m2.fasterxml.jackson.version>2.10.1</m2.fasterxml.jackson.version>
+    </properties>
 </project>
