--- a/main/plugins/org.talend.libraries.dom4j-jaxen/build.properties
+++ b/main/plugins/org.talend.libraries.dom4j-jaxen/build.properties
@@ -2,4 +2,8 @@ bin.includes = META-INF/,\
                .,\
                lib/,\
                licences/,\
-               lib/jaxen-1.1.1.jar,\
+               lib/dom4j-2.1.1.jar,\
+               lib/dom4j-1.6.1.jar,\
+               lib/jaxen-1.1.6.jar,\
+               lib/jaxen-1.1.1.jar
+
